--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -5,7 +5,7 @@ header {
     margin: 0 auto;
 }
 
-span {
+header span {
     color: $rosa;
     font-weight: 600;
     font-size: 0.75rem;
@@ -50,24 +50,23 @@ hr {
     display: flex;
 }
 
-input {
+header input {
     width: 616px;
     height: 48px;
     border-radius: 10px 0 0 10px;
     border: none;
     background-color: #F7F5F2;
     outline: none;
-    padding-left: 20px
+    padding-left: 25px;
 }
 
-input::placeholder {
-    padding-left: 20px;
+header input::placeholder {
     font-weight: 500;
     color: $cinza-escuro;
     font-size: 14px;
 }
 
-button {
+header button {
     height: 48px;
     background-color: #F7F5F2;
     border: none;
@@ -76,19 +75,19 @@ button {
     padding-right: 20px;
 }
 
-nav {
+header nav {
     max-width: 1280px;
     box-shadow: 0px 8px 16px rgba(57, 48, 19, 0.12);
 }
 
-ul {
+header ul {
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 40px;
 }
 
-a {
+header a {
     font-size: 0.75rem;
     color: $cinza-escuro;
     font-weight: 600;
@@ -99,11 +98,12 @@ a {
     }
 }
 
-li:last-child {
+header li:last-child {
     display: flex;
     align-items: center;
 }
 
-li:last-child a {
+header li:last-child a {
     margin-left: 13px
 }
+
