--- a/src/components/ProdutosRelacionados.scss
+++ b/src/components/ProdutosRelacionados.scss
@@ -27,6 +27,7 @@
     padding: 6px 0;
     border: 1px solid $cinza-intermediario;
     text-align: center;
+    margin-bottom: 20px;
     &:not(.sub-categorias:last-child) {
         border-right-width: 0;
     }
@@ -47,5 +48,6 @@
     font-weight: 700;
     color: $preto3;
     text-align: center;
+    margin-bottom: 20px;
 }
 
