finalizado carrossel vitrine

--- a/src/Style.scss
+++ b/src/Style.scss
@@ -3,6 +3,7 @@ $cinza-intermediario: #BDBDBD;
 $cinza-claro: #F0F0F0;
 $cinza2: #F4F4F4;
 $cinza3: #C0C0C0;
+$cinza4: #808080;
 $rosa: #F71963;
 $branco: #fff;
 $preto: #4E4E4E;
