--- a/src/components/Categorias.scss
+++ b/src/components/Categorias.scss
@@ -6,11 +6,17 @@
     margin-bottom: 22px;
     border-radius: 10px;
     box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.13);
+    @include device(1000px) {
+        margin-bottom: 5px;
+    }
 }
 
 .categoria p {
     text-align: center;
     font-weight: 500;
     font-size: 1rem;
-    color: $preto
+    color: $preto;
+    @include device(1000px) {
+        margin-bottom: 22px;
+    }
 }
