--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -3,6 +3,35 @@
 footer {
     margin-top: 170px;
     background-color: $preto4;
+    & h2 {
+        font-weight: 700;
+        font-size: 0.81rem;
+        color: $branco;
+        margin-bottom: 25px;
+        margin-top: 60px;
+        @include device(800px) { 
+            text-align: center;
+            font-size: 1.2rem;
+        }
+    }
+    & a {
+        font-weight: 300;
+        font-size: 0.81rem;
+        color: $branco;
+        line-height: 32px;
+        transition: .5s ease-in-out;
+        &:hover {
+            color: $rosa
+        }
+        @include device(800px) { 
+            font-size: 0.9rem;
+        }
+    }
+    & li {
+        @include device(800px) { 
+            text-align: center;
+        }
+    }
 }
 
 .footer-container {
@@ -10,21 +39,11 @@ footer {
     margin: 0 auto;
     padding-bottom: 30px;
     justify-content: space-between;
-}
-
-footer h2 {
-    font-weight: 700;
-    font-size: 0.81rem;
-    color: $branco;
-    margin-bottom: 25px;
-    margin-top: 60px;
-}
-
-footer a {
-    font-weight: 300;
-    font-size: 0.81rem;
-    color: $branco;
-    line-height: 32px;
+    @include device(800px) { 
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .social {
@@ -32,7 +51,6 @@ footer a {
     justify-content: space-between;
     margin-top: 60px;
 }
-
 
 .pagamentos img {
     margin: 0 30px 10px 0;
@@ -44,50 +62,45 @@ footer a {
     margin-top: 32px;
     border-radius: 10px;
     max-width: 380px;
-    padding: 40px
-}
-
-.newsletter h2 {
-    font-weight: 300;
-    font-size: 1.12rem;
-    color: $preto3;
-    text-transform: uppercase;
-    margin: 0;
-}
-
-.newsletter span {
-    font-weight: 700;
-    font-size: 1.31rem;
-}
-
-.newsletter p {
-    font-weight: 300;
-    font-size: 0.75rem;
-    text-align: center;
-    margin: 15px 0 30px 0
-}
+    padding: 40px;
+    & h2 {
+        font-weight: 300;
+        font-size: 1.12rem;
+        color: $preto3;
+        text-transform: uppercase;
+        margin: 0;
+    }
+    & span {
+        font-weight: 700;
+        font-size: 1.31rem;
+    }
+    & p {
+        font-weight: 300;
+        font-size: 0.75rem;
+        text-align: center;
+        margin: 15px 0 30px 0
+    }
+    & input {
+        width: 100%;
+        height: 45px;
+        padding-left: 20px;
+        border-radius: 4px;
+        border: 1px solid $preto4;
+    }
+} 
 
 .form {
     display: flex;
-}
-
-.newsletter input {
-    width: 100%;
-    height: 45px;
-    padding-left: 20px;
-    border-radius: 4px;
-    border: 1px solid $preto4;
-}
-
-.form button {
-    margin-left: 10px;
-    background-color: $rosa;
-    border: none;
-    width: 62px;
-    border-radius: 4px;
-    color: $branco;
-    font-weight: 700;
-    font-size: 0.87rem;
+    & button {
+        margin-left: 10px;
+        background-color: $rosa;
+        border: none;
+        width: 62px;
+        border-radius: 4px;
+        color: $branco;
+        font-weight: 700;
+        font-size: 0.87rem;
+    }
 }
 
 footer input::placeholder {
@@ -100,19 +113,25 @@ footer input::placeholder {
     @include container;
     padding: 22px 0;
     margin: 0 auto;
-    justify-content: space-between
-    ;
-}
+    justify-content: space-between;
+    @include device(800px) {
+        padding: 22px 20px
+    }
+    & p {
+        max-width: 690px;
+        font-weight: 400;
+        font-size: 0.62rem;
+        color: $branco;
+        text-transform: uppercase;
+        line-height: 13px;
 
-.copyright p {
-    max-width: 690px;
-    font-weight: 400;
-    font-size: 0.62rem;
-    color: $branco;
-    text-transform: uppercase;
-    line-height: 13px;
-}
-
-.copyright img:first-child {
-    margin-right: 30px;
+    }
+    & img:first-child {
+        margin-right: 30px;
+    }
+    & div {
+        @include device(800px) {
+            margin: 20px auto 0 auto;
+        }
+    }
 }
