--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -3,17 +3,17 @@
 header {
     max-width: 1280px;
     margin: 0 auto;
-}
-
-header span {
-    color: $rosa;
-    font-weight: 600;
-    font-size: 0.75rem;
+    & span {
+        color: $rosa;
+        font-weight: 600;
+        font-size: 0.75rem;
+    }
 }
 
 hr {
     border: 1px solid $cinza-claro;
 }
+
 
 .header-top {
     @include container;
@@ -23,16 +23,21 @@ hr {
     font-size: 0.75rem;
     color: $cinza-escuro;
     font-weight: 500;
+    @include device(800px) {
+        height: auto;
+        padding: 10px 0;
+        margin: 0 auto;
+    }
 }
 
 .header-top div {
     @include container;
     align-items: center;
+    &:nth-child(2) {
+        padding: 0 120px !important;
+    }
 }
 
-.header-top div:nth-child(2) {
-    padding: 0 120px;
-}
 
 .header-top img {
     margin-right: 5px
@@ -43,22 +48,32 @@ hr {
     justify-content: space-around;
     height: 72px;
     align-items: center;
+    & div {
+        align-items: center;
+        display: flex;
+    }
+    @include device(800px) { 
+        height: auto;
+        padding: 10px 0
+    }
 }
 
-.header-middle div {
-    align-items: center;
-    display: flex;
-}
-
-header input {
+.pesquisa {
     width: 616px;
-    height: 48px;
-    border-radius: 10px 0 0 10px;
-    border: none;
-    background-color: #F7F5F2;
-    outline: none;
-    padding-left: 25px;
+    @include device(900px) { 
+        width: 320px;
+    }
+    & input {
+        width: 100%;
+        height: 48px;
+        border-radius: 10px 0 0 10px;
+        border: none;
+        background-color: #F7F5F2;
+        outline: none;
+        padding-left: 25px;
+    }
 }
+
 
 header input::placeholder {
     font-weight: 500;
@@ -66,7 +81,45 @@ header input::placeholder {
     font-size: 14px;
 }
 
-header button {
+.header-middle a {
+    @include device(900px) {
+        margin: 10px 0;
+    }
+}
+
+.nav-btn {
+	padding: 5px;
+	cursor: pointer;
+	background: transparent;
+	border: none;
+	outline: none;
+	color: $rosa;
+	display: none;
+	opacity: 0;
+	font-size: 1.8rem;
+    @include device(900px) {
+        display: block;
+		opacity: 1;
+        margin: 0 auto;
+    }
+}
+
+header .responsive_nav {
+    @include device(900px) {
+        transform: translateY(100vh);
+    }
+}
+
+nav .nav-close-btn {
+    @include device(900px) {
+        position: absolute;
+        top: 2rem;
+        right: 2rem;
+    }
+}
+
+
+.pesquisa button {
     height: 48px;
     background-color: #F7F5F2;
     border: none;
@@ -80,30 +133,44 @@ header nav {
     box-shadow: 0px 8px 16px rgba(57, 48, 19, 0.12);
 }
 
-header ul {
+.nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 40px;
-}
-
-header a {
-    font-size: 0.75rem;
-    color: $cinza-escuro;
-    font-weight: 600;
-    text-transform: uppercase;
-    transition: .5s ease-in-out;
-    &:hover {
-        color: $rosa;
+    & a {
+            font-size: 0.75rem;
+            color: $cinza-escuro;
+            font-weight: 600;
+            text-transform: uppercase;
+            transition: .5s ease-in-out;
+            &:hover {
+                color: $rosa;
+            }
+            @include device(900px) {
+                font-size: 1.5rem;
+            }
+        }
+        @include device(900px) {
+            position: fixed;
+            top: -100vh;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 1.5rem;
+            background-color: $branco;
+            transition: 1s;
     }
 }
 
-header li:last-child {
+.nav div {
     display: flex;
     align-items: center;
+    & a {
+        margin-left: 13px
+    }
 }
-
-header li:last-child a {
-    margin-left: 13px
-}
-
