--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -7,31 +7,41 @@ h1 {
     color: $branco;
     line-height: 72px;
     margin-left: 90px;
+    @include device(800px) {
+        font-size: 2rem;
+        line-height: 30px;
+        text-align: center;
+        margin: 0 
+    }
 }
 
 .background p {
     font-size: 2.25rem;
     color: $branco;
     margin-left: 90px;
-}
-
-.background div {
-    height: 395px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, 
-    #000000 85.04%); 
-    opacity: 0.8;
+    @include device(800px) {
+        font-size: 2rem;
+        text-align: center;
+        margin: 20px 0 0 0
+    }
 }
 
 .background {
     background-image: url(../img/promocoes.png);
     background-size: cover;
     background-repeat: no-repeat;
+    & div {
+        height: 395px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, 
+        #000000 85.04%); 
+        opacity: 0.8;
+    }
 }
 
-main button {
+main a {
     max-width: 227px;
     background-color: $rosa;
     font-weight: 600;
@@ -40,10 +50,21 @@ main button {
     border-radius: 5px;
     margin-left: 90px;
     margin-top: 35px;
+    padding: 15px;
+    text-align: center;
+    cursor: pointer;
+    @include device(800px) {
+        margin: 10px auto;
+        width: 227px;
+    }
 }
 
 .categorias {
     @include container;
     justify-content: space-between;
     margin: 34px auto 40px auto;
+     @include device(1000px) {
+        max-width: 500px;
+        padding: 0 20px;
+    }
 }
