--- a/src/components/Marcas.scss
+++ b/src/components/Marcas.scss
@@ -2,29 +2,43 @@
 
 .marcas {
     margin: 155px 0 104px 0;
-}
-
-.marcas h2 {
-    margin-bottom: 60px;
-    font-weight: 700;
-    color: $rosa;
-    text-align: center;
-    font-size: 1.87rem;
+    & h2 {
+        margin-bottom: 60px;
+        font-weight: 700;
+        color: $rosa;
+        text-align: center;
+        font-size: 1.87rem;
+    }
 }
 
 .marcas nav {
     @include container;
     margin: 0 auto;
     justify-content: space-between;
+    & div img {
+        display: block;
+        margin: 0 auto;
+    }
 }
 
-.marcas nav div {
-    border-radius: 100%;
-    width: 211px;
-    height: 211px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 0 20px;
-    box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.13);
+.swiper-container-brand {
+    @include vitrine(256) {
+        width: 256;
+    }
+
+    @include vitrine(512) {
+        width: 512;
+    }
+
+    @include vitrine(768) {
+        width: 768;
+    }
+
+    @include vitrine(1024) {
+        width: 1024;
+    }
+
+    @include vitrine(1280) {
+        width: 1280;
+    }
 }
