--- a/src/components/Vitrine.scss
+++ b/src/components/Vitrine.scss
@@ -3,69 +3,79 @@
 
 .vitrine {
     @include container;
+    & h3 {
+        font-size: 1rem;
+        color: $preto3;
+        text-align: center;
+        margin-top: 15px;
+    }
+
+    & img {
+        display: block;
+        margin: 0px auto 10px auto;
+    }
+}
+
+.swiper-container {
+    @include vitrine(320px) {
+        width: 320px;
+    }
+
+    @include vitrine(640px) {
+        width: 640px;
+    }
+
+    @include vitrine(960px) {
+        width: 960px;
+    }
+
+    @include vitrine(1280px) {
+        width: 1280px;
+    }
 }
 
 .itemVintrine{
     box-shadow: 0px 3px 19px rgba(0, 0, 0, 0.22);
     padding: 15px;
     border-radius: 10px;
-    margin: 20px
-}
-
-.vitrine h3 {
-    font-size: 1rem;
-    color: $preto3;
-    text-align: center;
-    margin-top: 15px;
-}
-
-.vitrine img {
-    display: block;
-    margin: 0px auto 10px auto;
-    
-}
-
-.itemVintrine p:nth-child(3) {
-    font-weight: 300;
-    font-size: 0.93rem;
-    color: $preto3
-}
-
-.itemVintrine p:nth-child(4) {
-    font-weight: 400;
-    text-decoration-line: line-through;
-    color: $cinza4;
-}
-
-.itemVintrine p:nth-child(5) {
-    font-weight: 700;
-    font-size: 1.25rem;
-    color: $preto3;
-}
-
-.itemVintrine p:nth-child(6) {
-    font-weight: 400;
-    font-size: 0.75rem;
-    color: $preto3;
-}
-
-.itemVintrine p:nth-child(7) {
-    font-weight: 400;
-    font-size: 0.75rem;
-    color: $rosa;
-    margin-top: 7px;
-}
-
-.itemVintrine a {
-    background-color: $rosa;
-    max-width: 100%;
-    display: block;
-    margin-top: 10px;
-    color: $branco;
-    font-weight: 700;
-    border-radius: 4px;
-    height: 44px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin: 20px;
+    & p:nth-child(3) {
+        font-weight: 300;
+        font-size: 0.93rem;
+        color: $preto3;
+    }
+    & p:nth-child(4) {
+        font-weight: 400;
+        text-decoration-line: line-through;
+        color: $cinza4;
+    }
+    & p:nth-child(5) {
+        font-weight: 700;
+        font-size: 1.25rem;
+        color: $preto3;
+    }
+    & p:nth-child(6) {
+        font-weight: 400;
+        font-size: 0.75rem;
+        color: $preto3;
+    }
+    & p:nth-child(7) {
+        font-weight: 400;
+        font-size: 0.75rem;
+        color: $rosa;
+        margin-top: 7px;
+    } 
+    & a {
+        background-color: $rosa;
+        max-width: 100%;
+        display: block;
+        margin-top: 10px;
+        color: $branco;
+        font-weight: 700;
+        border-radius: 4px;
+        height: 44px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }   
 }
