finalizado ajustes no component Categorias

--- a/src/components/Categorias.scss
+++ b/src/components/Categorias.scss
@@ -6,17 +6,29 @@
     margin-bottom: 22px;
     border-radius: 10px;
     box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.13);
+    transition: .5s ease-in-out;
+    &:hover {
+        background-color: $branco;
+    }
     @include device(1000px) {
         margin-bottom: 5px;
     }
 }
 
-.categoria p {
+.categoria {
     text-align: center;
-    font-weight: 500;
-    font-size: 1rem;
-    color: $preto;
-    @include device(1000px) {
-        margin-bottom: 22px;
-    }
-}
+    & a {
+        text-align: center;
+        display:inline-block;
+        font-weight: 500;
+        font-size: 1rem;
+        color: $preto;
+        cursor: pointer;
+        transition: .5s ease-in-out;
+        &:hover {
+            color: $rosa
+        }
+        @include device(1000px) {
+            margin-bottom: 22px;
+        }
+}}
