--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,4 +1,4 @@
-@import '../Style';
+@import '../../Style';
 
 h1 {
     max-width: 822px;
@@ -27,7 +27,7 @@ h1 {
 }
 
 .background {
-    background-image: url(../img/promocoes.png);
+    background-image: url(../../img/promocoes.png);
     background-size: cover;
     background-repeat: no-repeat;
     & div {
