--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -35,9 +35,8 @@ h1 {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, 
-        #000000 85.04%); 
-        opacity: 0.8;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0, 
+        rgba(0, 0, 0, 0.9) 85.04%); 
     }
 }
 
