--- a/src/components/Parceiros/Parceiros.scss
+++ b/src/components/Parceiros/Parceiros.scss
@@ -23,9 +23,9 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
-        background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 85.04%);
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0, 
+        rgba(0, 0, 0, 0.9) 85.04%); 
         mix-blend-mode: normal;
-        opacity: 0.8;
         border-radius: 20px;
         @include device(800px) {
             width: 100%;
