--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -34,7 +34,7 @@ footer {
     }
 }
 
-.footer-container {
+.Footer-container {
     @include container;
     margin: 0 auto;
     padding-bottom: 30px;
@@ -46,18 +46,18 @@ footer {
     }
 }
 
-.social {
+.Social {
     display: flex;
     justify-content: space-between;
     margin-top: 60px;
 }
 
-.pagamentos img {
+.Pagamentos img {
     margin: 0 30px 10px 0;
     text-align: center;
 }
 
-.newsletter {
+.Newsletter {
     background-color: $branco;
     margin-top: 32px;
     border-radius: 10px;
@@ -89,7 +89,7 @@ footer {
     }
 } 
 
-.form {
+.Form {
     display: flex;
     & button {
         margin-left: 10px;
@@ -109,7 +109,7 @@ footer input::placeholder {
     font-size: 0.75rem;
 }
 
-.copyright {
+.Copyright {
     @include container;
     padding: 22px 0;
     margin: 0 auto;
@@ -124,7 +124,6 @@ footer input::placeholder {
         color: $branco;
         text-transform: uppercase;
         line-height: 13px;
-
     }
     & img:first-child {
         margin-right: 30px;
