--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,7 +15,7 @@ hr {
 }
 
 
-.header-top {
+.Header-top {
     @include container;
     justify-content: center;
     height: 32px;
@@ -30,7 +30,7 @@ hr {
     }
 }
 
-.header-top div {
+.Header-top div {
     @include container;
     align-items: center;
     &:nth-child(2) {
@@ -39,11 +39,11 @@ hr {
 }
 
 
-.header-top img {
+.Header-top img {
     margin-right: 5px
 }
 
-.header-middle {
+.Header-middle {
     @include container;
     justify-content: space-around;
     height: 72px;
@@ -58,7 +58,7 @@ hr {
     }
 }
 
-.pesquisa {
+.Pesquisa {
     width: 616px;
     @include device(900px) { 
         width: 320px;
@@ -81,13 +81,13 @@ header input::placeholder {
     font-size: 14px;
 }
 
-.header-middle a {
+.Header-middle a {
     @include device(900px) {
         margin: 10px 0;
     }
 }
 
-.nav-btn {
+.Nav-btn {
 	padding: 5px;
 	cursor: pointer;
 	background: transparent;
@@ -104,13 +104,13 @@ header input::placeholder {
     }
 }
 
-header .responsive_nav {
+header .Responsive_nav {
     @include device(900px) {
         transform: translateY(100vh);
     }
 }
 
-nav .nav-close-btn {
+nav .Nav-close-btn {
     @include device(900px) {
         position: absolute;
         top: 2rem;
@@ -119,7 +119,7 @@ nav .nav-close-btn {
 }
 
 
-.pesquisa button {
+.Pesquisa button {
     height: 48px;
     background-color: #F7F5F2;
     border: none;
@@ -133,7 +133,7 @@ header nav {
     box-shadow: 0px 8px 16px rgba(57, 48, 19, 0.12);
 }
 
-.nav {
+.Nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -167,7 +167,7 @@ header nav {
     }
 }
 
-.nav div {
+.Nav div {
     display: flex;
     align-items: center;
     & a {
