--- a/src/components/Main/Categorias/Categorias.scss
+++ b/src/components/Main/Categorias/Categorias.scss
@@ -1,21 +1,8 @@
 @import '../../../Style';
 
-.categoria div {
-    padding: 34px;
-    background-color: $cinza2;
-    margin-bottom: 22px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.13);
-    transition: .5s ease-in-out;
-    &:hover {
-        background-color: $branco;
-    }
-    @include device(1000px) {
-        margin-bottom: 5px;
-    }
-}
+.Categoria 
 
-.categoria {
+.Categoria {
     text-align: center;
     & a {
         text-align: center;
@@ -31,4 +18,19 @@
         @include device(1000px) {
             margin-bottom: 22px;
         }
-}}
+    } 
+    & div {
+        padding: 34px;
+        background-color: $cinza2;
+        margin-bottom: 22px;
+        border-radius: 10px;
+        box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.13);
+        transition: .5s ease-in-out;
+        &:hover {
+            background-color: $branco;
+        }
+        @include device(1000px) {
+            margin-bottom: 5px;
+        }
+    }
+}
